Saves received counter after page refresh

--- a/st_flask/static/style.css
+++ b/st_flask/static/style.css
@@ -416,6 +416,12 @@ table tbody td {
   font-size: 1rem;
 }
 
+.file-label input[type="file"] {
+  position: absolute;
+  left: -9999px;
+}
+
+
 
 
 
