Fixed double click zoom not being disabled

--- a/st_flask/templates/index.html
+++ b/st_flask/templates/index.html
@@ -1618,7 +1618,7 @@ function loadRssiLayer() {
             //window.mainMap._container.title = "";
             window.mainMap.dragging.enable();
             window.mainMap.scrollWheelZoom.enable();
-            window.mainMap.doubleClickZoom.enable();
+            window.mainMap.doubleClickZoom.disable();
             window.mainMap.boxZoom.enable();
             window.mainMap.keyboard.enable();
             if (window.mainMap.tap) window.mainMap.tap.enable();
