--- a/st_flask/static/style.css
+++ b/st_flask/static/style.css
@@ -299,7 +299,8 @@ table tbody td {
 .status-bar {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    flex-wrap: wrap;  
+    gap: 10px;
     font-size: 0.9rem;
     color: #ccc;
     margin-top: 10px;
@@ -396,6 +397,25 @@ table tbody td {
 
 .battery-unknown {
   background-color: #6c757d; /* grey */
+  color: white;
+}
+.goal-green {
+  background-color: #4caf50;
+  color: white;
+}
+
+.goal-orange {
+  background-color: #ff9800;
+  color: white;
+}
+
+.goal-red {
+  background-color: #f44336;
+  color: white;
+}
+
+.goal-grey {
+  background-color: #6c757d;
   color: white;
 }
 
